--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kontena-Website",
+  "name": "Hotel-Kontena",
   "version": "1.0.0",
   "description": "My posh Nuxt.js project",
   "author": "agilma",
