--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "bootstrap-vue": "^2.0.0",
-    "bootstrap": "^4.1.3"
+    "@nuxtjs/apollo": "^4.0.0-rc19",
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.4.1",
+    "graphql-tag": "^2.10.3",
+    "nuxt": "^2.11.0",
+    "vue": "^2.6.6",
+    "vue-server-renderer": "^2.6.6",
+    "vue-template-compiler": "^2.6.6"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.31",
+    "babel-jest": "^24.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "prettier": "^1.16.4",
     "vue-jest": "^4.0.0-0"
   }
 }
